# cf-recommend

./: .gitignore  .npmignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json
.github/workflows/: release.yml
src/: main.cpp
src/analysis/: analyzer.cpp  analyzer.hpp  recommender.cpp  recommender.hpp  topics.cpp  topics.hpp
src/api/: codeforces_api.cpp  codeforces_api.hpp
src/cli/: commands.cpp  commands.hpp  output.hpp
src/db/: database.cpp  database.hpp
src/http/: http_client.cpp  http_client.hpp
src/json/: json.hpp
src/model/: models.hpp
src/util/: strings.hpp
